Add admin-gateway and login views

--- a/public/ella-rises-landingpage/index.html
+++ b/public/ella-rises-landingpage/index.html
@@ -14550,13 +14550,13 @@
                     Contact Us
                   </a>
                   <a
-                    href="https://www.ellarises.org/contact-us"
+                    href="/dashboard"
                     style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
                   >
                     See the impact
                   </a>
                   <a
-                    href="https://www.ellarises.org/contact-us"
+                    href="/admin"
                     style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
                   >
                     Login
