Add demo placeholder page and update nav links

--- a/public/ella-rises-landingpage/index.html
+++ b/public/ella-rises-landingpage/index.html
@@ -14210,16 +14210,6 @@
     }
 
 
-
-
-
-
-
-
-
-
-
-
     .comp-ktc42fg31 .s__3HBpfT.oRS_ov7---skin-5-wired .sDcrqZo {
       background-color: #181818;
       color: #FFFFFF;
@@ -14514,37 +14504,37 @@
   "
   >
                   <a
-                    href="https://www.ellarises.org/copy-of-about"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;font-weight:700;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     About
                   </a>
                   <a
-                    href="https://www.ellarises.org/programs"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Programs
                   </a>
                   <a
-                    href="https://www.ellarises.org"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Events
                   </a>
                   <a
-                    href="https://www.ellarises.org/team-3"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Get involved
                   </a>
                   <a
-                    href="https://www.ellarises.org/press"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Press
                   </a>
                   <a
-                    href="https://www.ellarises.org/contact-us"
+                    href="/demo-placeholder.html"
                     style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
                   >
                     Contact Us
