Add demo survey, teapot, and 404 views

--- a/public/ella-rises-landingpage/index.html
+++ b/public/ella-rises-landingpage/index.html
@@ -14504,37 +14504,37 @@
   "
   >
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;font-weight:700;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     About
                   </a>
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Programs
                   </a>
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Events
                   </a>
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Get involved
                   </a>
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
                     Press
                   </a>
                   <a
-                    href="/demo-placeholder.html"
+                    href="/demo-placeholder"
                     style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
                   >
                     Contact Us
@@ -14547,9 +14547,16 @@
                   </a>
                   <a
                     href="/admin"
-                    style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
+                    style="padding:4px 20px;text-decoration:none;color:#000;border-right:1px solid #f6e7e1;white-space:nowrap;"
                   >
-                    Login
+                    Admin Portal
+                  </a>
+                  <a
+                    href="/teapot"
+                    style="padding:4px 20px;text-decoration:none;color:#000;white-space:nowrap;"
+                    title="I'm a teapot!"
+                  >
+                    🫖
                   </a>
                 </div>
               </nav>
@@ -15596,9 +15603,9 @@ white-space:nowrap;"
                                   <p class="font_9 wixui-rich-text__text"
                                     style="line-height:1.8em; text-align:center; font-size:16px;"><span
                                       class="color_15 wixui-rich-text__text">If you would like to further discuss how
-                                      you would like to contribute, please email <a data-auto-recognition="true"
-                                        href="mailto:nadia@ellarises.org"
-                                        class="wixui-rich-text__text">nadia@ellarises.org</a>. </span></p>
+                                      you would like to contribute, please <a
+                                        href="/demo-placeholder"
+                                        class="wixui-rich-text__text">contact us</a>. </span></p>
 
                                   <p class="font_9 wixui-rich-text__text"
                                     style="line-height:1.8em; text-align:center; font-size:16px;"><span
